--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "yet-another-react-lightbox": "^3.17.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
